# docassemble-PowerOfAttorneyProperty

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/PowerOfAttorneyProperty/data/questions/: power_of_attorney_for_property.yml
docassemble/PowerOfAttorneyProperty/data/templates/: instructions_poa_property.docx  poa_property_statutory_shortform_word_version.docx
